try to make ts compile on build

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/node": "~8.10.30",
     "@types/tempy": "^0.2.0",
     "jest": "~23.6.0",
-    "nodemon": "^1.18.5",
     "prettier": "1.14.3",
     "rimraf": "~2.6.2",
     "ts-jest": "~23.10.2",
@@ -20,7 +19,7 @@
     "tslint-config-prettier": "1.15.0",
     "tslint-microsoft-contrib": "~5.2.1",
     "tsutils": "~3.0.0",
-    "typescript": "~3.1.0"
+    "nodemon": "^1.18.5"
   },
   "scripts": {
     "debug": "tsc | nodemon dist/src/main.js --nolazy --debug-brk=5858",
@@ -37,6 +36,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "tempy": "^0.2.1",
-    "tslib": "~1.9.3"
+    "tslib": "~1.9.3",
+    "typescript": "~3.1.0"
   }
 }
