--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/jest": "~23.3.2",
-    "@types/node": "~8.10.30",
     "@types/tempy": "^0.2.0",
     "jest": "~23.6.0",
     "prettier": "1.14.3",
@@ -37,6 +36,7 @@
     "express": "^4.16.4",
     "tempy": "^0.2.1",
     "tslib": "~1.9.3",
-    "typescript": "~3.1.0"
+    "typescript": "~3.1.0",
+    "@types/node": "~8.10.30"
   }
 }
