--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/node": "~8.10.30",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "simple-git": "^1.106.0",
     "tempy": "^0.2.1",
     "tslib": "~1.9.3",
-    "typescript": "~3.1.0",
-    "@types/node": "~8.10.30"
+    "typescript": "~3.1.0"
   }
 }
