--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "debug": "tsc | nodemon dist/src/main.js --nolazy --debug-brk=5858",
     "start": "tsc -w | jest --watch | nodemon dist/src/main.js",
     "clean": "rimraf coverage build tmp",
-    "build": "tsc -p tsconfig.release.json",
+    "build": "tsc",
     "build:watch": "tsc -w -p tsconfig.release.json",
     "lint": "tslint -t stylish --project \"tsconfig.json\"",
     "test": "jest --coverage",
